--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -27,4 +27,4 @@
     <button type="submit">Signup</button>
   </div>
 </form>
-<script src="#"></script>
+<script src="/public/JavaScript/login.js"></script>
