umdated comments.js

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -15,4 +15,4 @@
 </section>
 {{/if}}
 
-<button type="submit"><a href="#">Add Post</a></button>
+<button type="submit"><a href="/dashboard/new">Add Post</a></button>
