--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,26 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Blog</title>
-    {{!-- <link rel="stylesheet" href="/public/style.css"> --}}
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
 </head>
 
 <body>
-  <div class="everything">
+  <div>
 
     <header>
       <div>
-     
-     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <h1 class="home-title">Ortal's Tech Blog</h1>
+             <h1 class="home-title">Ortal's Tech Blog</h1>
+     <nav class="navbar navbar-expand-lg navbar-dark bg-gray">
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/dashboard">Dashboard</a>
@@ -43,13 +42,9 @@
 
   </div>
 </nav>
-
-          
+       
       </div>
 
-      <div>
-        <h1 class="home-title">Ortal's Tech Blog</h1>
-      </div>
 
     </header>
 
@@ -60,7 +55,7 @@
     
   </div>
   {{#if loggedIn}}
-  <script src="/public/JavaScript/"></script>
+  <script src="/public/javascript/"></script>
   {{/if}}
 
 </body>
