updated js and handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -55,7 +55,7 @@
     
   </div>
   {{#if loggedIn}}
-  <script src="/public/javascript/"></script>
+  <script src="/javascript/logout.js"></script>
   {{/if}}
 
 </body>
